# CCrystalSimulation

./: .gitignore  CMakeLists.txt  README.md
src/: Color.h  CrystalControl.c  CrystalControl.h  CrystalModel.c  CrystalModel.h  CrystalView.c  CrystalView.h  Matrix.c  Matrix.h  Point.h  main.c  random.h
